--- a/DisplayPOS/MainPage.xaml
+++ b/DisplayPOS/MainPage.xaml
@@ -8,6 +8,13 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBox Name="text1" Margin="78,20,0,0" VerticalAlignment="Top"/>
+        
+        <Button Content="show"
+                Visibility="Collapsed"
+                Name="btnDisplay" HorizontalAlignment="Left"
+                Margin="78,91,0,0" VerticalAlignment="Top" 
+                Click="btnDisplay_ClickAsync"/>
 
     </Grid>
 </Page>
