--- a/DisplayPOS/MainPage.xaml
+++ b/DisplayPOS/MainPage.xaml
@@ -8,12 +8,12 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBox Name="text1" Margin="78,20,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="text1" Margin="0,30,0,0" VerticalAlignment="Top"/>
         
-        <Button Content="show"
+        <Button Content="Ready"
                 Visibility="Collapsed"
                 Name="btnDisplay" HorizontalAlignment="Left"
-                Margin="78,91,0,0" VerticalAlignment="Top" 
+                Margin="0" VerticalAlignment="Top" 
                 Click="btnDisplay_ClickAsync"/>
 
     </Grid>
